# jelly_bird

./: README.md
JellyBird/: JellyBird.sln
jelly_bird/app/src/main/cpp/: CMakeLists.txt  main.cpp
jelly_bird/app/src/main/cpp/jellybird/app/include/: AndroidJellyBirdApp.h  App.h  GameApp.h  JellyBirdApp.h
jelly_bird/app/src/main/cpp/jellybird/app/src/: App.cpp
jelly_bird/app/src/main/cpp/jellybird/app/src/game/: GameApp.cpp
jelly_bird/app/src/main/cpp/jellybird/engine/core/include/: AbsEaseAnimation.h  AlphaEaseAnimation.h  Animation.h  AnimationStep.h  AssetGroup.h  Assets.h  Audio.h  BaseComponent.h  BaseInclude.h  Button.h  Camera.h  CollisionUtil.h  Color.h  Ease.h  EaseAnimation.h  ExpEase.h  Game.h  Graphics.h  Hack3dEngine.h  ImageView.h  Input.h  KeyInfo.h  LinearEase.h  MoveEaseAnimation.h  Music.h  OnClickListener.h  Padding.h  PointerEvent.h  PointerEventInfo.h  PointerInfo.h  QuadTexture2D.h  QuadTextureRegion2D.h  Rect.h  Resource.h  Screen.h  Shader.h  ShaderProgram.h  Sound.h  Texture2D.h  Texture2DShader.h  (+8 more)
jelly_bird/app/src/main/cpp/jellybird/engine/core/src/: Hack3dEngine.cpp
jelly_bird/app/src/main/cpp/jellybird/engine/core_android/include/: AndroidAssets.h  AndroidGraphics.h  AndroidHack3dEngine.h  AndroidInput.h  AndroidOpenGLQuadTexture2D.h  AndroidOpenGLQuadTextureRegion2D.h  AndroidOpenGLShader.h  AndroidOpenGLShaderProgram.h  AndroidOpenGLTexture2D.h  AndroidOpenGLTexture2DShader.h  AndroidOpenGLTextureRegion2D.h  AndroidOpenSLESAudio.h  AndroidOpenSLESMusic.h  AndroidOpenSLESSound.h  AndroidOpenSLESSoundQueue.h  AndroidUtil.h
(+147 files in other folders)
